Update providers list

--- a/wearables/providers/Introduction.mdx
+++ b/wearables/providers/Introduction.mdx
@@ -6,41 +6,41 @@ sidebar_position: 1
 
 We currently Support over 300+ devices, a full list can be seen below.
 
-| Provider                                             | Slug              | Description                                                   |
-| ---------------------------------------------------- | ----------------- | ------------------------------------------------------------- |
-| [Freestyle](https://www.freestylelibre.co.uk/libre/) | `freestyle_libre` | Abbott CGM Glucose monitor                                    |
-| [Fitbit](https://www.fitbit.com/global/uk/home)      | `fitbit`          | Activity Trackers (all devices)                               |
-| [Garmin](https://www.garmin.com)                     | `garmin`          | Fitness watches (all devices)                                 |
-| [Google Fit](https://www.google.com/fit/)            | `google_fit`      | Activity Trackers (all devices)                               |
-| [Oura](https://ouraring.com)                         | `oura`            | Smart Sleep tracking ring                                     |
-| [Peloton](https://www.onepeloton.com)                | `peloton`         | Popular Indoor Exercise bike                                  |
-| [Renpho](https://renpho.com)                         | `renpho`          | Fitness Scales                                                |
-| [Strava](https://www.strava.com)                     | `strava`          | Running & Cycling Social Network                              |
-| [Wahoo](https://wahoofitness.com)                    | `wahoo`           | Cycling Equipment                                             |
-| [Whoop](https://www.whoop.com)                       | `whoop`           | Your Personal Digital Fitness and Health Coach                |
-| [Zwift](https://zwift.com)                           | `zwift`           | Virtual cycling and running                                   |
-| [Withings](https://www.withings.com)                 | `withings`        | Fitness scales, watches and health monitors                   |
-| [iHealth](https://ihealthlabs.com)                   | `ihealth`         | Blood pressure, Fitness scales, Glucometers & Fitness watches |
-| [8Sleep](https://www.eightsleep.com)                 | `eight_sleep`     | Smart Mattress                                                |
-| [Omron](https://www.omron-healthcare.com) (SDK)      | `omron_ble`       | Blood Pressure monitors and scales                            |
-| [Contour](https://www.diabetes.ascensia.com) (SDK)   | `contour_ble`     | Glucometers                                                   |
-| [Accu-Chek](https://www.accu-chek.com) (SDK)         | `accuchek_ble`    | Glucose Strips/MySugr App                                     |
+| Provider                                                             | Slug                  | Description                                                   |
+| -------------------------------------------------------------------- | --------------------- | ------------------------------------------------------------- |
+| [Freestyle](https://www.freestylelibre.co.uk/libre/)                 | `freestyle_libre`     | Abbott CGM Glucose monitor                                    |
+| [Fitbit](https://www.fitbit.com/global/uk/home)                      | `fitbit`              | Activity Trackers (all devices)                               |
+| [Garmin](https://www.garmin.com)                                     | `garmin`              | Fitness watches (all devices)                                 |
+| [Google Fit](https://www.google.com/fit/)                            | `google_fit`          | Activity Trackers (all devices)                               |
+| [Oura](https://ouraring.com)                                         | `oura`                | Smart Sleep tracking ring                                     |
+| [Peloton](https://www.onepeloton.com)                                | `peloton`             | Popular Indoor Exercise bike                                  |
+| [Renpho](https://renpho.com)                                         | `renpho`              | Fitness Scales                                                |
+| [Strava](https://www.strava.com)                                     | `strava`              | Running & Cycling Social Network                              |
+| [Wahoo](https://wahoofitness.com)                                    | `wahoo`               | Cycling Equipment                                             |
+| [Whoop](https://www.whoop.com)                                       | `whoop`               | Your Personal Digital Fitness and Health Coach                |
+| [Zwift](https://zwift.com)                                           | `zwift`               | Virtual cycling and running                                   |
+| [Withings](https://www.withings.com)                                 | `withings`            | Fitness scales, watches and health monitors                   |
+| [iHealth](https://ihealthlabs.com)                                   | `ihealth`             | Blood pressure, Fitness scales, Glucometers & Fitness watches |
+| [8Sleep](https://www.eightsleep.com)                                 | `eight_sleep`         | Smart Mattress                                                |
+| [Omron](https://www.omron-healthcare.com) (SDK)                      | `omron_ble`           | Blood Pressure monitors and scales                            |
+| [Contour](https://www.diabetes.ascensia.com) (SDK)                   | `contour_ble`         | Glucometers                                                   |
+| [Accu-Chek](https://www.accu-chek.com) (SDK)                         | `accuchek_ble`        | Glucose Strips/MySugr App                                     |
+| [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)        | `apple_health_kit`    | Health and fitness data on iPhone and Apple Watch             |
+| [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK) | `freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK                   |
+| [Braun Healthcare](https://www.braunhealthcare.com)                  | `braun`               | Blood Pressure Monitors                                       |
 
 ## Providers under active development
 
 **Beta**: Currently under development
 **Planned**: On our roadmap
 
-| Provider                                                             | Slug                  | Description                                       | Stage   |
-| -------------------------------------------------------------------- | --------------------- | ------------------------------------------------- | ------- |
-| [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)        | `apple_health_kit`    | Health and fitness data on iPhone and Apple Watch | Beta    |
-| [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK) | `freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK       | Beta    |
-| [Braun Healthcare](https://www.braunhealthcare.com)                  | `braun`               | Blood Pressure Monitors                           | Beta    |
-| [Dexcom](https://www.dexcom.com)                                     | `dexcom`              | Continuous glucose monitor                        | Beta    |
-| [Suunto](https://www.suunto.com)                                     | TBD                   | Fitness Watch                                     | Planned |
-| [iGlucose](https://smartmeterrpm.com/iglucose/)                      | TBD                   | Glucose Strips                                    | Planned |
-| [Polar](https://www.polar.com)                                       | TBD                   | Activity Watch                                    | Planned |
-| [KetoMojo](https://keto-mojo.com)                                    | TBD                   | Glucose, Ketones and more                         | Planned |
+| Provider                                        | Slug | Description               | Stage   |
+| ----------------------------------------------- | ---- | ------------------------- | ------- |
+| [MyfitnessPal](https://www.myfitnesspal.com)    | TBD  | Nutrition data            | Ongoing |
+| [Suunto](https://www.suunto.com)                | TBD  | Fitness Watch             | Planned |
+| [iGlucose](https://smartmeterrpm.com/iglucose/) | TBD  | Glucose Strips            | Planned |
+| [Polar](https://www.polar.com)                  | TBD  | Activity Watch            | Planned |
+| [KetoMojo](https://keto-mojo.com)               | TBD  | Glucose, Ketones and more | Planned |
 
 ## Full Device Support List
 
@@ -64,25 +64,25 @@ For the other providers, marked as `Polling` below, we periodically fetch the la
 
 All data can be fetched instantaneously, some are configured via our live refresh endpoint and others are automatically kept up to date via our webhook implementation.
 
-| Provider                                             | Description  |
-| ---------------------------------------------------- | ------------ |
-| [Fitbit](https://www.fitbit.com/global/uk/home)      | Webhook      |
-| [Garmin](https://www.garmin.com)                     | Webhook      |
-| [Strava](https://www.strava.com)                     | Webhook      |
-| [Wahoo](https://wahoofitness.com)                    | Webhook      |
-| [Withings](https://www.withings.com)                 | Webhook      |
-| [iHealth](https://ihealthlabs.com)                   | Webhook      |
-| [Omron](https://www.omron-healthcare.com) (SDK)      | Webhook      |
-| [Contour](https://www.diabetes.ascensia.com) (SDK)   | Webhook      |
-| [Accu-Chek](https://www.accu-chek.com) (SDK)         | Webhook      |
-| [Freestyle](https://www.freestylelibre.co.uk/libre/) | Polling      |
-| [Google Fit](https://www.google.com/fit/)            | Polling      |
-| [Oura](https://ouraring.com)                         | Polling      |
-| [Peloton](https://www.onepeloton.com)                | Polling      |
-| [Renpho](https://renpho.com)                         | Polling      |
-| [Whoop](https://www.whoop.com)                       | Polling      |
-| [Zwift](https://zwift.com)                           | Polling      |
-| [8Sleep](https://www.eightsleep.com)                 | Polling      |
+| Provider                                             | Description |
+| ---------------------------------------------------- | ----------- |
+| [Fitbit](https://www.fitbit.com/global/uk/home)      | Webhook     |
+| [Garmin](https://www.garmin.com)                     | Webhook     |
+| [Strava](https://www.strava.com)                     | Webhook     |
+| [Wahoo](https://wahoofitness.com)                    | Webhook     |
+| [Withings](https://www.withings.com)                 | Webhook     |
+| [iHealth](https://ihealthlabs.com)                   | Webhook     |
+| [Omron](https://www.omron-healthcare.com) (SDK)      | Webhook     |
+| [Contour](https://www.diabetes.ascensia.com) (SDK)   | Webhook     |
+| [Accu-Chek](https://www.accu-chek.com) (SDK)         | Webhook     |
+| [Freestyle](https://www.freestylelibre.co.uk/libre/) | Polling     |
+| [Google Fit](https://www.google.com/fit/)            | Polling     |
+| [Oura](https://ouraring.com)                         | Polling     |
+| [Peloton](https://www.onepeloton.com)                | Polling     |
+| [Renpho](https://renpho.com)                         | Polling     |
+| [Whoop](https://www.whoop.com)                       | Polling     |
+| [Zwift](https://zwift.com)                           | Polling     |
+| [8Sleep](https://www.eightsleep.com)                 | Polling     |
 
 :::note
 To provide you with the best possible experience, for some providers we implement a mix of Webhook and Polling for different resources. Check out the [resources page](https://docs.tryvital.io/wearables/providers/Resources) for more info.
