--- a/docs/providers/Providers Guides/freestyle.mdx
+++ b/docs/providers/Providers Guides/freestyle.mdx
@@ -54,6 +54,7 @@ Note, Freestyle Libre is available in different regions, ensure you select the c
 | United States (`us`)                           | United States (`us`) \* |
 | Europe (`eu`)                                  | Europe (`eu`) \*        |
 |                                                | Singapore (`sg`)        |
+|                                                | Australia (`au`)        |
 | _(\*) Default Freestyle region if unspecified_ |
 
 ## Vital Link
