Missing Apple HealthKit from the list

--- a/wearables/providers/Introduction.mdx
+++ b/wearables/providers/Introduction.mdx
@@ -64,25 +64,26 @@ For the other providers, marked as `Polling` below, we periodically fetch the la
 
 All data can be fetched instantaneously, some are configured via our live refresh endpoint and others are automatically kept up to date via our webhook implementation.
 
-| Provider                                             | Description |
-| ---------------------------------------------------- | ----------- |
-| [Fitbit](https://www.fitbit.com/global/uk/home)      | Webhook     |
-| [Garmin](https://www.garmin.com)                     | Webhook     |
-| [Strava](https://www.strava.com)                     | Webhook     |
-| [Wahoo](https://wahoofitness.com)                    | Webhook     |
-| [Withings](https://www.withings.com)                 | Webhook     |
-| [iHealth](https://ihealthlabs.com)                   | Webhook     |
-| [Omron](https://www.omron-healthcare.com) (SDK)      | Webhook     |
-| [Contour](https://www.diabetes.ascensia.com) (SDK)   | Webhook     |
-| [Accu-Chek](https://www.accu-chek.com) (SDK)         | Webhook     |
-| [Freestyle](https://www.freestylelibre.co.uk/libre/) | Polling     |
-| [Google Fit](https://www.google.com/fit/)            | Polling     |
-| [Oura](https://ouraring.com)                         | Polling     |
-| [Peloton](https://www.onepeloton.com)                | Polling     |
-| [Renpho](https://renpho.com)                         | Polling     |
-| [Whoop](https://www.whoop.com)                       | Polling     |
-| [Zwift](https://zwift.com)                           | Polling     |
-| [8Sleep](https://www.eightsleep.com)                 | Polling     |
+| Provider                                                        | Description |
+| --------------------------------------------------------------- | ----------- |
+| [Fitbit](https://www.fitbit.com/global/uk/home)                 | Webhook     |
+| [Garmin](https://www.garmin.com)                                | Webhook     |
+| [Strava](https://www.strava.com)                                | Webhook     |
+| [Wahoo](https://wahoofitness.com)                               | Webhook     |
+| [Withings](https://www.withings.com)                            | Webhook     |
+| [iHealth](https://ihealthlabs.com)                              | Webhook     |
+| [Omron](https://www.omron-healthcare.com) (SDK)                 | Webhook     |
+| [Contour](https://www.diabetes.ascensia.com) (SDK)              | Webhook     |
+| [Accu-Chek](https://www.accu-chek.com) (SDK)                    | Webhook     |
+| [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)   | Webhook     |
+| [Freestyle](https://www.freestylelibre.co.uk/libre/)(API + SDK) | Polling     |
+| [Google Fit](https://www.google.com/fit/)                       | Polling     |
+| [Oura](https://ouraring.com)                                    | Polling     |
+| [Peloton](https://www.onepeloton.com)                           | Polling     |
+| [Renpho](https://renpho.com)                                    | Polling     |
+| [Whoop](https://www.whoop.com)                                  | Polling     |
+| [Zwift](https://zwift.com)                                      | Polling     |
+| [8Sleep](https://www.eightsleep.com)                            | Polling     |
 
 :::note
 To provide you with the best possible experience, for some providers we implement a mix of Webhook and Polling for different resources. Check out the [resources page](https://docs.tryvital.io/wearables/providers/Resources) for more info.
