--- a/wearables/providers/Resources.mdx
+++ b/wearables/providers/Resources.mdx
@@ -220,3 +220,15 @@ Even if a field is available for a provider, it doesn't mean it's available. For
 >
   {" "}
 </iframe>
+
+### Workout Stream
+
+Soon. Work in progress.
+
+### Profile
+
+Soon. Work in progress.
+
+### Timeseries
+
+Soon. Work in progress.
