--- a/wearables/sdks/iOS.mdx
+++ b/wearables/sdks/iOS.mdx
@@ -474,5 +474,5 @@ As per the [documentation](https://developer.apple.com/documentation/healthkit/h
 >
 > For example, on iOS, `stepCount` samples have an hourly maximum frequency.
 
-Although we have the frequency set to `.immediate`, we cannot guarantee syncing as soon as taken some steps.
+This means that although we have background delivery's frequency set to `.immediate`, we cannot guarantee immediate syncing.
 :::
