--- a/wearables/providers/Introduction.mdx
+++ b/wearables/providers/Introduction.mdx
@@ -28,6 +28,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)        | `apple_health_kit`    | Health and fitness data on iPhone and Apple Watch             |
 | [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK) | `freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK                   |
 | [Braun Healthcare](https://www.braunhealthcare.com)                  | `braun`               | Blood Pressure Monitors                                       |
+| [Hammerhead](https://www.hammerhead.com)                             | `hammerhead`          | Cycling computers                                             |
 
 ## Providers under active development
 
@@ -36,7 +37,9 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 | Provider                                        | Slug | Description               | Stage   |
 | ----------------------------------------------- | ---- | ------------------------- | ------- |
-| [MyfitnessPal](https://www.myfitnesspal.com)    | TBD  | Nutrition data            | Ongoing |
+| [MyfitnessPal](https://www.myfitnesspal.com)    | TBD  | Nutrition data            | Enquire |
+| [Xiaomi](https://www.xiaomi.com)                | TBD  | All data                  | Enquire |
+| [Cronometer](https://www.cronometer.com)        | TBD  | Nutrition data            | Enquire |
 | [Suunto](https://www.suunto.com)                | TBD  | Fitness Watch             | Planned |
 | [iGlucose](https://smartmeterrpm.com/iglucose/) | TBD  | Glucose Strips            | Planned |
 | [Polar](https://www.polar.com)                  | TBD  | Activity Watch            | Planned |
