--- a/wearables/providers/Introduction.mdx
+++ b/wearables/providers/Introduction.mdx
@@ -35,15 +35,15 @@ We currently Support over 300+ devices, a full list can be seen below.
 **Beta**: Currently under development
 **Planned**: On our roadmap
 
-| Provider                                        | Slug | Description               | Stage   |
-| ----------------------------------------------- | ---- | ------------------------- | ------- |
-| [MyfitnessPal](https://www.myfitnesspal.com)    | TBD  | Nutrition data            | Enquire |
-| [Xiaomi](https://www.xiaomi.com)                | TBD  | All data                  | Enquire |
-| [Cronometer](https://www.cronometer.com)        | TBD  | Nutrition data            | Enquire |
-| [Suunto](https://www.suunto.com)                | TBD  | Fitness Watch             | Planned |
-| [iGlucose](https://smartmeterrpm.com/iglucose/) | TBD  | Glucose Strips            | Planned |
-| [Polar](https://www.polar.com)                  | TBD  | Activity Watch            | Planned |
-| [KetoMojo](https://keto-mojo.com)               | TBD  | Glucose, Ketones and more | Planned |
+| Provider                                        | Slug             | Description               | Stage   |
+| ----------------------------------------------- | ---------------- | ------------------------- | ------- |
+| [MyfitnessPal](https://www.myfitnesspal.com)    | `my_fitness_pal` | Nutrition data            | Enquire |
+| [Xiaomi](https://www.xiaomi.com)                | `xiaomi`         | All data                  | Enquire |
+| [Cronometer](https://www.cronometer.com)        | `cronometer`     | Nutrition data            | Enquire |
+| [Suunto](https://www.suunto.com)                | `suunto`         | Fitness Watch             | Planned |
+| [iGlucose](https://smartmeterrpm.com/iglucose/) | `iglucose`       | Glucose Strips            | Planned |
+| [Polar](https://www.polar.com)                  | `polar`          | Activity Watch            | Planned |
+| [KetoMojo](https://keto-mojo.com)               | TBD              | Glucose, Ketones and more | Planned |
 
 ## Full Device Support List
 
@@ -79,14 +79,14 @@ All data can be fetched instantaneously, some are configured via our live refres
 | [Contour](https://www.diabetes.ascensia.com) (SDK)              | Webhook     |
 | [Accu-Chek](https://www.accu-chek.com) (SDK)                    | Webhook     |
 | [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)   | Webhook     |
-| [Freestyle](https://www.freestylelibre.co.uk/libre/)(API + SDK) | Webhook\*   |
-| [Google Fit](https://www.google.com/fit/)                       | Webhook\*   |
-| [Oura](https://ouraring.com)                                    | Webhook\*   |
-| [Peloton](https://www.onepeloton.com)                           | Webhook\*   |
-| [Renpho](https://renpho.com)                                    | Webhook\*   |
-| [Whoop](https://www.whoop.com)                                  | Webhook\*   |
-| [Zwift](https://zwift.com)                                      | Webhook\*   |
-| [8Sleep](https://www.eightsleep.com)                            | Webhook\*   |
+| [Freestyle](https://www.freestylelibre.co.uk/libre/)(API + SDK) | Polling     |
+| [Google Fit](https://www.google.com/fit/)                       | Polling     |
+| [Oura](https://ouraring.com)                                    | Polling     |
+| [Peloton](https://www.onepeloton.com)                           | Polling     |
+| [Renpho](https://renpho.com)                                    | Polling     |
+| [Whoop](https://www.whoop.com)                                  | Polling     |
+| [Zwift](https://zwift.com)                                      | Polling     |
+| [8Sleep](https://www.eightsleep.com)                            | Polling     |
 
 :::note
 To provide you with the best possible experience, for some providers we implement a mix of Webhook and Polling for different resources. Check out the [resources page](https://docs.tryvital.io/wearables/providers/Resources) for more info.
