Update hammerhead docs

--- a/wearables/providers/Introduction.mdx
+++ b/wearables/providers/Introduction.mdx
@@ -28,7 +28,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)        | `apple_health_kit`    | Health and fitness data on iPhone and Apple Watch             |
 | [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK) | `freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK                   |
 | [Braun Healthcare](https://www.braunhealthcare.com)                  | `braun`               | Blood Pressure Monitors                                       |
-| [Hammerhead](https://www.hammerhead.com)                             | `hammerhead`          | Cycling computers                                             |
+| [Hammerhead](https://www.hammerhead.io)                              | `hammerhead`          | Cycling computers                                             |
 
 ## Providers under active development
 
