--- a/wearables/providers/Introduction.mdx
+++ b/wearables/providers/Introduction.mdx
@@ -87,6 +87,7 @@ All data can be fetched instantaneously, some are configured via our live refres
 | [Whoop](https://www.whoop.com)                                  | Polling     |
 | [Zwift](https://zwift.com)                                      | Polling     |
 | [8Sleep](https://www.eightsleep.com)                            | Polling     |
+| [Hammerhead](https://www.hammerhead.io)                         | Polling     |
 
 :::note
 To provide you with the best possible experience, for some providers we implement a mix of Webhook and Polling for different resources. Check out the [resources page](https://docs.tryvital.io/wearables/providers/Resources) for more info.
