--- a/wearables/sdks/iOS.mdx
+++ b/wearables/sdks/iOS.mdx
@@ -323,6 +323,8 @@ Readings taken with the SDK are not guaranteed to match the official Freestyle L
 
 ## 6. VitalHealthKit
 
+### 1. Quick Intro
+
 VitalHealthKit is an abstraction on top of HealthKit that 1) automates the extraction of data 2) pushs that data to Vital automatically.
 
 You start by enabling HealthKit capabilities in your app. Please follow this [guide](https://developer.apple.com/documentation/healthkit/setting_up_healthkit). It should looks like this:
@@ -409,7 +411,7 @@ cancellable = VitalHealthKitClient.shared.status.sink { value in
 }
 ```
 
-### 1. Background Delivery
+### 2. Background Delivery
 
 You can enable the SDK to deliver HealthKit data in background. This provides a more seamless experience, since the user doesn't need to open your app to sync data. Start by enabling "Background Delivery" in the app capabilities:
 
@@ -427,14 +429,14 @@ VitalHealthKitClient.configure(
 
 <br />
 
-That's the only thing you need to do! If you are using background delivery, you also don't need to call `syncData:`. Depending on the `HKSampleType` syncing, updates will come after a period of time.
+That's the only thing you need to do! If you are using background delivery, you don't need to call `syncData:`. Depending on the `HKSampleType` syncing, updates will come after a period of time.
 
 <br />
 
 :::caution
 As per the [documentation](https://developer.apple.com/documentation/healthkit/hkhealthstore/1614175-enablebackgrounddelivery):
 
-> As soon as your app launches, HealthKit calls the update handler for any observer queries that match the newly saved data. If you plan on supporting background delivery, set up all your observer queries in your app delegate’s application(_:didFinishLaunchingWithOptions:) method. By setting up the queries in application(_:didFinishLaunchingWithOptions:), you ensure that you’ve instantiated your queries, and they’re ready to use before HealthKit delivers the updates.
+> As soon as your app launches, HealthKit calls the update handler for any observer queries that match the newly saved data. If you plan on supporting background delivery, set up all your observer queries in your app delegate’s application(_:didFinishLaunchingWithOptions:) method. By setting up the queries in `application(_:didFinishLaunchingWithOptions:)`, you ensure that you’ve instantiated your queries, and they’re ready to use before HealthKit delivers the updates.
 
 This means that you should make sure you call `VitalHealthKitClient.configure(.init(backgroundDeliveryEnabled: true))` in your app delegate's `application(_:didFinishLaunchingWithOptions:)` method.
 :::
@@ -448,3 +450,78 @@ As per the [documentation](https://developer.apple.com/documentation/healthkit/h
 
 This means that although we have background delivery's frequency set to `.immediate`, we cannot guarantee immediate syncing.
 :::
+
+### 3. Miscellaneous Information
+
+#### SDK configuration flow
+
+Vital's iOS SDK allows you to configure it in any order you wish. There are however two things to keep in mind:
+
+1. You need to call `VitalClient.configure`, `VitalClient.setUserId` and `VitalHealthKitClient.configure` in order for data to be pushed to Vital.
+2. You need to call `VitalHealthKitClient.configure` at `application(_:didFinishLaunchingWithOptions:)`, in order for background delivery to work properly.
+
+From an implementation perspective, `VitalHealthKitClient` suspends all operations until both `VitalClient.configure` and `VitalClient.setUserId` are called. This means that it's safe to configure `VitalHealthKitClient` before the `VitalClient`.
+
+#### VitalHealthKit configuration
+
+The `VitalHealthKitClient` can be configured with the following options:
+
+- `autoSyncEnabled`: Whether or not to automatically sync data. If `true`, data is synced as soon as the `configure` method is called. By default, this is `false`.
+- `backgroundDeliveryEnabled`: Whether or not to enable background delivery. You need to enable this on the project settings besides passing `true`, otherwise the app will crash. If `true` as soon as configure is called, a sync is kicked off by default. This means you don't need both `autoSyncEnabled` and `backgroundDeliveryEnabled` set to `true`. By default, this is `false`.
+- `logsEnabled`: Whether or not to enable logs. Useful when debugging. By default, this is `false`.
+- `daysFetched`: Number of days to fetch data for. The first you configure the SDK, we will get X days of amount of data for the permissions you requested. By default, this is `90`.
+
+#### `sync` versus background delivery
+
+If you are using background delivery, you don't need to call `VitalHealthKit.shared.sync`. When you call `VitalHealthKit.configure` with `backgroundDeliveryEnabled: true`, the SDK will automatically sync data. Afterwards, it will periodically sync data when it's available. You should call `VitalHealthKit.shared.sync` if you are confident that there's new data available (e.g. your app is writting to HealthKit) and you want to sync immediately.
+
+#### App with existing HealthKit permissions
+
+As of version `0.4.6` we are syncing the following types:
+
+```swift
+/// Activity
+HKSampleType.quantityType(forIdentifier: .stepCount)!,
+HKSampleType.quantityType(forIdentifier: .activeEnergyBurned)!,
+HKSampleType.quantityType(forIdentifier: .basalEnergyBurned)!,
+HKSampleType.quantityType(forIdentifier: .flightsClimbed)!,
+HKSampleType.quantityType(forIdentifier: .distanceWalkingRunning)!,
+HKSampleType.quantityType(forIdentifier: .vo2Max)!,
+HKSampleType.quantityType(forIdentifier: .bodyMass)!,
+
+/// Body
+HKSampleType.quantityType(forIdentifier: .bodyFatPercentage)!,
+HKQuantityType.quantityType(forIdentifier: .height)!,
+
+/// Profile
+HKCharacteristicType.characteristicType(forIdentifier: .biologicalSex)!,
+HKCharacteristicType.characteristicType(forIdentifier: .dateOfBirth)!,
+
+/// Sleep
+HKSampleType.categoryType(forIdentifier: .sleepAnalysis)!,
+HKSampleType.quantityType(forIdentifier: .heartRate)!,
+HKSampleType.quantityType(forIdentifier: .heartRateVariabilitySDNN)!,
+HKSampleType.quantityType(forIdentifier: .oxygenSaturation)!,
+HKSampleType.quantityType(forIdentifier: .restingHeartRate)!,
+HKSampleType.quantityType(forIdentifier: .respiratoryRate)!
+
+/// Workout
+HKSampleType.workoutType(),
+HKSampleType.quantityType(forIdentifier: .respiratoryRate)!
+HKSampleType.quantityType(forIdentifier: .heartRate)!,
+
+/// Vitals(Heartrate)
+HKSampleType.quantityType(forIdentifier: .heartRate)!,
+
+/// Vitals(glucose)
+HKSampleType.quantityType(forIdentifier: .bloodGlucose)!
+
+/// Vitals(blood pressure)
+HKSampleType.quantityType(forIdentifier: .bloodPressureSystolic)!,
+HKSampleType.quantityType(forIdentifier: .bloodPressureDiastolic)!
+```
+
+If your app already asked for one, or more, of these permissions, we will try to sync it automatically. You don't have to do anything. Keep in mind the following caveats:
+
+1. For example, if the user gave permission for steps, we will try sync steps as part of an Activity. This means that this data is available via `/summary/activity/` endpoint.
+2. Types part of `Vitals` (e.g. `heartrate`, `bloodGlucose`), are treated as timeseries data, so they are available via the timeseries API: `/timeseries/`.
