small change to trigger change

--- a/docs/api-reference/user/create-user.mdx
+++ b/docs/api-reference/user/create-user.mdx
@@ -10,11 +10,9 @@ curl --request POST \
      --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>' \
      --header 'Content-Type: application/json' \
-     --data '
-{
-     "client_user_id": "your_unique_id"
-}
-'
+     --data '{
+      "client_user_id": "your_unique_id"
+    }'
 ```
 
 ```javascript Node
