--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -4,9 +4,15 @@ description: "Using demo users to build and test your Vital integration"
 ---
 
 <Note>
+This feature is currently available for the following providers:
 
-This feature is currently available for Fitbit and Oura. The others are coming soon!
+* Apple Health Kit
+* Fitbit
+* Oura
+* Whoop
 
+The others will be coming soon. If there is a particular provider you would like us to add
+please do not hesitate to contact us!
 </Note>
 
 When integrating with Vital, you may not own a physical device for each provider you're planning to support. For this, we provide demo users with test data so you can build and test the whole integration without touching a real device.
@@ -38,15 +44,7 @@ After the demo connection is created, a Fitbit logo will appear beside your user
 
 From here, everything works exactly the same as if you connected a real device. This means you will receive the following webhook updates:
 
-- [Connection created](/webhooks/data_flow#connection-created), as soon as the connection is created.
-- [Historical webhooks](/webhooks/data_flow#historical-data-flow). We simulate historical data for the demo device and send the corresponding webhook updates, as in the real-world scenario.
-- [Daily webhooks](/webhooks/data_flow#historical-data-flow). We also simulate updates to the device data every couple of hours so you can test receiving the data when a user recorded a workout or other activity.
-- [Refresh user data](/api-reference/user#refresh-users-data). You can also instantaneously refresh a user's data through this endpoint.
-
-<TipWarning>
-
-Test data are automatically generated. This means that although it exactly follows the provider schema and looks somewhat realistic, you will still find things that are incorrect. E.g. you might see a sleep for which `start_date=2022-05-01` and `end_date=2022-03-01`. Thus, you can rely on the schema being correct, but not on the actual contents of the data.
-
-If you need the test data to be more consistent in terms of content, do not hesitate to contact us!
-
-</TipWarning>
+* [Connection created](/webhooks/data_flow#connection-created), as soon as the connection is created.
+* [Historical webhooks](/webhooks/data_flow#historical-data-flow). We simulate historical data for the demo device and send the corresponding webhook updates, as in the real-world scenario.
+* [Daily webhooks](/webhooks/data_flow#historical-data-flow). We also simulate updates to the device data every couple of hours so you can test receiving the data when a user recorded a workout or other activity.
+* [Refresh user data](/api-reference/user#refresh-users-data). You can also instantaneously refresh a user's data through this endpoint.
